# simula-openvr

./: .gitignore  openvr.nix  package.yaml  shell.nix  simula-openvr.cabal  stack.yaml
cbits/: openvr_capi_fixed.h  util.c  util.cpp  util.h
src/: OpenVR.chs  OpenVR.hs
src/OpenVR/: Interface.hs  Internal.chs  TH.hs
src/Simula/: OpenVR.chs
